MINOR: Consumer tidying